--- a/src/components/Common/Header/Header.css
+++ b/src/components/Common/Header/Header.css
@@ -10,6 +10,7 @@
   }
   .logo span{
     color: #4d4f51;
+    letter-spacing: 4px;
   }
   .head .icon {
     margin-left: 10px;
@@ -19,6 +20,7 @@
   header {
     background-color: rgba(255, 255, 255, 0.2);
     margin: 0 30px;
+    
   }
   header .nav {
     display: flex !important;
